--- a/Freecad_classic-2/Freecad_classic-2.qss
+++ b/Freecad_classic-2/Freecad_classic-2.qss
@@ -172,14 +172,13 @@ https://doc.qt.io/qt-5/stylesheet-examples.html#customizing-qcheckbox
 
 --------------------------------------------------------------------------- */
 QCheckBox {
-  color: black;
   padding: 2px;
   outline: none;
   background-color: transparent;
 }
 
 QCheckBox:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QCheckBox QWidget:disabled {
@@ -209,8 +208,8 @@ QCheckBox::indicator:unchecked:disabled {
 }
 
 QCheckBox::indicator:checked {
-  background-color: transparent; /* QRadioButton has the same color */
-  border: 1px solid #cccccc; /* QRadioButton has the same color */
+  background-color: white; /* QRadioButton has the same color */
+  border: 1px solid black; /* QRadioButton has the same color */
   image:url(qss:images_dark-light/checkbox_dark.svg);
 }
 
@@ -221,6 +220,7 @@ QCheckBox::indicator:checked:hover, QCheckBox::indicator:checked:pressed {
 
 QCheckBox::indicator:checked:disabled {
   background-color: #cccccc;
+  border: 1px solid #cccccc;
 }
 
 QCheckBox::indicator:indeterminate {
@@ -315,7 +315,7 @@ QRadioButton {
 }
 
 QRadioButton:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QRadioButton:disabled {
@@ -387,7 +387,7 @@ QMenuBar {
 }
 
 QMenuBar:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QMenuBar::item {
@@ -629,7 +629,7 @@ QScrollBar::handle:horizontal:hover {
 }
 
 QScrollBar::handle:horizontal:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QScrollBar::handle:vertical {
@@ -647,7 +647,7 @@ QScrollBar::handle:vertical:hover {
 }
 
 QScrollBar::handle:vertical:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QScrollBar::add-line:horizontal {
@@ -753,7 +753,7 @@ QTextEdit {
 }
 
 QTextEdit:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QTextEdit:selected {
@@ -772,7 +772,7 @@ QPlainTextEdit {
 }
 
 QPlainTextEdit:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QPlainTextEdit:selected {
@@ -872,17 +872,17 @@ background-color: #8ab6e9;
 
 --------------------------------------------------------------------------- */
 QAbstractSpinBox {
-  background-color: transparent;
+  background-color: white;
   border: 1px solid #cccccc;
   color: black;
   /* This fixes 103, 111 */
-  padding-top: 2px;
+  padding-top: 3px;
   /* This fixes 103, 111 */
-  padding-bottom: 2px;
+  padding-bottom: 3px;
   padding-left: 4px;
   padding-right: 4px;
   border-radius: 0px;
-  min-height: 1.5em;
+  /*min-height: 1.5em;*/
   /* min-width: 5px; removed to fix 109 */
 }
 
@@ -952,11 +952,11 @@ QAbstractSpinBox:hover {
 }
 
 QAbstractSpinBox:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QAbstractSpinBox:selected {
-  background: #dc00fa;
+  background: #faf200;
   color: black;
 }
 
@@ -1138,7 +1138,7 @@ QPushButton:pressed {
 }
 
 QPushButton:selected {
-  background: #dc00fa;
+  background: #faf200;
   color: black;
 }
 
@@ -1203,7 +1203,7 @@ QToolButton:checked:pressed {
 }
 
 QToolButton:checked:selected {
-  background: #dc00fa;
+  background: #faf200;
   color: black;
 }
 
@@ -1213,7 +1213,7 @@ QToolButton:hover {
 }
 
 QToolButton:pressed {
-  background-color: #dc00fa;
+  background-color: #faf200;
 }
 
 QToolButton:selected {
@@ -1351,6 +1351,11 @@ QComboBox QAbstractItemView:hover {
   background-color:#e1e1e1;
   color: black;
 }
+QComboBox QAbstractItemView:disabled {
+  background-color: #cccccc;
+  color: #515151;
+}
+
 
 QComboBox QAbstractItemView:selected {
   background: #8ab6e9;
@@ -1360,6 +1365,7 @@ QComboBox QAbstractItemView:selected {
 QComboBox QAbstractItemView:alternate {
   background: #cccccc;
 }
+
 
 QComboBox:disabled {
   background-color: #cccccc;
@@ -1372,11 +1378,11 @@ QComboBox:hover {
 }
 
 QComboBox:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QComboBox:on {
-  selection-background-color: #dc00fa;
+  selection-background-color: #faf200;
 }
 
 QComboBox::indicator {
@@ -1392,7 +1398,10 @@ QComboBox::indicator {
 QComboBox::indicator:alternate {
   background: #cccccc;
 }
-
+QComboBox::indicator:disabled {
+  background: transparent;
+}
+/*
 QComboBox::item {
   /* Remove to fix #282, #285 and MR #288*/
   /*&:checked {
@@ -1403,7 +1412,7 @@ QComboBox::item {
             border: 0px solid transparent;
         }
         */
-}
+/*}*/
 
 QComboBox::item:alternate {
   background: #f5f5f5;
@@ -1523,7 +1532,7 @@ margin: 0px;
 padding: 0px;
 border-bottom: 1px solid #cccccc;
 border-left: 1px solid #cccccc;
-border-right: 1px solid #cccccc;z
+border-right: 1px solid #cccccc;
 border-top-left-radius: 0px;
 border-top-right-radius: 0px;
 border-bottom-left-radius: 3px;
@@ -1583,7 +1592,7 @@ QSint--ActionGroup QFrame[class="content"] QToolButton:hover{
     border: 1px solid #8ab6e9;
 }
 QSint--ActionGroup QFrame[class="content"] QToolButton:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QSint--ActionGroup QFrame[class="content"] QToolButton:disabled,
@@ -1612,7 +1621,7 @@ QSlider:disabled {
 }
 
 QSlider:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QSlider::groove:horizontal {
@@ -1670,7 +1679,7 @@ QSlider::handle:horizontal:hover {
 }
 
 QSlider::handle:horizontal:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QSlider::handle:vertical {
@@ -1688,7 +1697,7 @@ QSlider::handle:vertical:hover {
 }
 
 QSlider::handle:vertical:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 /* QLineEdit --------------------------------------------------------------
@@ -1721,7 +1730,7 @@ QLineEdit:hover {
 }
 
 QLineEdit:focus {
-  border: 2px solid #dc00fa;
+  border: 2px solid #faf200;
 }
 
 QLineEdit:selected {
@@ -1876,7 +1885,7 @@ QTabBar::tab:top, QDockWidget QTabBar::tab:top {
 QTabBar::tab:top:selected, QDockWidget QTabBar::tab:top:selected {
   background-color: #f6f6f6;
   border: 0px solid white;
-  /*border: 1px solid #dc00fa;
+  /*border: 1px solid #faf200;
   border-radius: 0px;
   margin-left: 4px;
   margin-right: 4px;
@@ -1907,7 +1916,7 @@ QTabBar::tab:bottom, QDockWidget QTabBar::tab:bottom {
 
 QTabBar::tab:bottom:selected, QDockWidget QTabBar::tab:bottom:selected {
   background-color: #f5f5f5;
-  /*border: 1px solid #dc00fa;
+  /*border: 1px solid #faf200;
   border-radius: 0px;
   margin-left: 4px;
   margin-right: 4px;
@@ -1937,7 +1946,7 @@ QTabBar::tab:left, QDockWidget QTabBar::tab:left {
 
 QTabBar::tab:left:selected, QDockWidget QTabBar::tab:left:selected {
   background-color: #f5f5f5;
-  border: 0px solid #dc00fa;
+  border: 0px solid #faf200;
 }
 
 QTabBar::tab:left:!selected:hover, QDockWidget QTabBar::tab:left:!selected:hover {
@@ -1961,7 +1970,7 @@ QTabBar::tab:right, QDockWidget QTabBar::tab:right {
 
 QTabBar::tab:right:selected, QDockWidget QTabBar::tab:right:selected {
   background-color: #f5f5f5;
-  border: 0px solid #dc00fa;
+  border: 0px solid #faf200;
 }
 
 QTabBar::tab:right:!selected:hover, QDockWidget QTabBar::tab:right:!selected:hover {
@@ -2196,7 +2205,7 @@ QTreeView:focus,
 QListView:focus,
 QTableView:focus,
 QColumnView:focus {
-  border: 1px solid #dc00fa;
+  border: 1px solid #faf200;
 }
 
 QTreeView::item:pressed,
